# file-duplicator

./: Cargo.toml  README.md
benches/: find_duplicates.rs
src/: lib.rs  main.rs
tests/: add_test.rs  integration_test.rs
