[package]
name = "file-deduplicator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "file-deduplicator"
path = "src/main.rs"
